# MoEspresso

./: .gitignore  AGENTS.md  DEVGUIDE.md  LICENSE-MIT  Makefile  README.md  THIRD-PARTY-NOTICES  pyproject.toml
docs/: README.md  artifact_conformance_matrix.md  artifact_contract.md  benchmark_reproduction.md  correctness_ladder.md  deepseek_v4_package_recipe.md  deepseek_v4_quality.md  deepseek_v4_speed.md  disk_kv.md  optimization_methodology.md  optimizer_decision.md  ornith_package.md  ornith_quality.md  ornith_speed.md  package_format.md  probe_evidence.md  runtime_resident.md  source_inventory.md  ssd_streaming.md  tool_calls.md
native/: .gitignore  build.sh  run_native_tests.sh
native/ds4_moe/: CMakeLists.txt  bindings.cpp  ds4_moe.cpp  ds4_moe.h
native/ds4_moe/metal/: ds4_moe.metal
native/gate/: CMakeLists.txt  bindings.cpp  gate.cpp  gate.h
src/moespresso/: __init__.py
src/moespresso/agentlib/: __init__.py  client.py  conversation.py  dsml.py  envelope.py  execution.py  loop_policy.py  profile.py  qwenxml.py  repair.py  sandbox.py  sse.py  subagent.py  tools.py
src/moespresso/agentlib/dialect_study/: __init__.py  __main__.py  dialects.py  episodes.py  run.py
src/moespresso/agentlib/roadtest/: __init__.py  __main__.py  fixture.py  ledger.py  run.py  script.py  server.py
src/moespresso/core/: __init__.py  artifact.py
src/moespresso/correctness/: __init__.py  environment.py  gate.py  goldens.py  ladder.py  reconstruct.py  tq_reference.py
src/moespresso/correctness/deepseek_v4/: __init__.py  attention_diff.py  attention_output_capture.py  attention_output_replay.py  attention_projection_capture.py  compressor_diff.py  ffn_capture.py  gguf_routed_replay.py  hc_input_diff.py  hc_post_diff.py  hc_split_diff.py  kv_round_diff.py  mixed_attention_diff.py  moe_block_replay.py  moe_graph_replay.py  parity.py  q2.py  q3.py  quality.py  rope_capture.py  rope_diff.py  router_diff.py  short_probe.py  stage_capture.py
src/moespresso/correctness/fixtures/deepseek_v4/q2_official_continuations/: README.md
src/moespresso/correctness/fixtures/deepseek_v4/q3_long_context/: answers.json  manifest.json
src/moespresso/correctness/fixtures/deepseek_v4/test_vectors/: README.md
src/moespresso/correctness/ornith/: __init__.py  gate.py  sandbox.py  scoring.py  tasks.py
src/moespresso/correctness/qwen35/: __init__.py  hard_questions.py
src/moespresso/inventory/: __init__.py  architecture_profile.py  build.py  hf_inspect.py  roles.py  safetensors_header.py
src/moespresso/inventory/deepseek_v4/: __init__.py  roles.py  static.py
src/moespresso/optimize/: __init__.py  affine_elasticity.py  aggregate.py  allocate.py  decide.py  health.py  monotone.py  sizes.py
src/moespresso/package/: __init__.py  agentic_profile.py  bundle.py  constants.py  convert.py  hotlist.py  kquant_backend.py  kquant_bundle.py  kquant_cache.py  kquant_format.py  kquant_gguf.py  kquant_recipe.py  manifest.py  plan.py  sidecars.py  templates.py  tokenizer.py  tq.py  write.py
src/moespresso/package/deepseek_v4/: __init__.py  hotlist_vector.py  kquant.py  kquant_package.py  recipe.py  write.py
src/moespresso/package/deepseek_v4/data/: expert_hotlist_vector.json
src/moespresso/package/qwen/: __init__.py  expert_allocation.py  kquant_package.py  recipe.py  write.py
src/moespresso/package/templates/: qwen3_5_moe.chat_template.jinja
src/moespresso/probe/: __init__.py  build.py  calibration.py  gguf_parse.py  quality.py  roundtrip.py  weight_io.py
src/moespresso/probe/deepseek_v4/: __init__.py  codec.py  experts.py  probe.py
src/moespresso/runtime/: __init__.py  build.py  chat_stream.py  disk_kv.py  expert_index.py  expert_loader.py  expert_locality.py  expert_pool.py  expert_slot_pool.py  gather_tq_split_norms.py  generation.py  http.py  kquant_install.py  kv_policy.py  native_gate.py  owned_switchglu.py  pooled_switchglu.py  pread_into.py  prefix_cache.py  raw_greedy.py  routed_decode_kernel.py  serve.py  ssd_streaming_build.py  streaming_capacity.py  streaming_run_lock.py  thinking.py  tool_stream.py  verify.py
src/moespresso/runtime/deepseek_v4/: __init__.py  attention.py  attention_seam_kernel.py  cache.py  decode_attention_kernel.py  fixed_decode_state.py  hc_kernel.py  indexed_attention_kernel.py  indexer_score_kernel.py  layer_stage_replay.py  model.py  native_moe.py  ratio4_attention_replay.py  renderer.py  router_kernel.py  speed_primitives.py  speed_stats.py
src/moespresso/runtime/qwen/: __init__.py  full_attention.py  gdn_decode.py  prefill_chunk.py  router_gemv.py  sorted_switch_glu.py
src/moespresso/toolcalls/: __init__.py  dsml.py  envelope.py  qwenxml.py  repair.py  types.py
tests/: conftest.py  test_affine_elasticity.py  test_affine_role_elasticity_smoke.py  test_agentic_profile.py  test_agentlib_client.py  test_agentlib_conversation.py  test_agentlib_dsml.py  test_agentlib_envelope.py  test_agentlib_loop_policy.py  test_agentlib_profile.py  test_agentlib_qwenxml.py  test_agentlib_repair.py  test_agentlib_sandbox.py  test_agentlib_subagent.py  test_agentlib_toolcalls.py  test_agentlib_tools.py  test_aggregate.py  test_allocate_frontier.py  test_architecture_profile.py  test_artifact.py  test_build.py  test_bundle.py  test_calibration.py  test_chat_stream.py  test_chunk_sizing.py  test_convert_cli.py  test_convert_gate.py  test_convert_memory.py  test_correctness_environment.py  test_correctness_goldens.py  test_correctness_ladder.py  test_correctness_reconstruct.py  test_decide.py  test_deepseek_v4_attention.py  test_deepseek_v4_attention_output_replay.py  test_deepseek_v4_attention_seam_kernel.py  test_deepseek_v4_cache.py  test_deepseek_v4_codec.py  test_deepseek_v4_decode_attention_kernel.py  test_deepseek_v4_experts.py  (+109 more)
